2000-02-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Map.cc (index_to_CHptr): Now a macro.

	* defun-int.h (UNDERSCORIFY): New macro.
	(DEFCONST_INTERNAL, DEFCONSTX_INTERNAL): Use it.

	* data.cc (Fis_list): Fix continuation char.

	* Map.cc (CHptr_to_index, goodCHptr): Delete static decl.

	* ov.h (unary_op, binary_op, assign_op): Prepend `op_' to elts.
	Change all usses

	* All source files: Sprinkle with std:: qualifier as needed.

2000-01-31  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* sighandlers.cc (install_signal_handlers): Add std:: qualifier
	for set_net_handler.

	* All source files: Include iostream, fstream, strstream,
	etc. as needed instead of using forward declarations for these
	classes.

2000-01-30  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* input.cc (input_event_hook, Finput_event_hook): New functions.
	(hook_fcn, user_data): New static variables.

2000-01-28  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pt-except.cc (do_catch_code): Don't do anything special for
	tree_return_command::returning, or tree_break_command::breaking.

	* error.cc (vwarning): New function.
	(warning): Use it instead of calling verror.

	* oct-stream.cc (octave_base_stream::oscanf):
	Result is now always nconv+1 elements.  Return count of successful
	conversions in last element.
	* file-io.cc (Ffscanf, Fsscanf, Fscanf): Fix doc string.

	* pt-except.cc (do_catch_code): Unwind-protect buffer_error_messages.
	Be sure to run all unwind-protects before returning.
	(tree_try_catch_command::eval): Add do_catch_code cleanup function
	to unwind-protect stack before resetting buffer_error_messages.
	Use unwind-protect to save and restore buffer_error_messages.
	If there is no catch code, discard the cleanup function and run
	the unwind-protect for buffer_error_messages.

	* error.cc (bind_global_error_variable): Avoid dereferencing
	error_message_buffer if it is NULL.

	* parse.y (evaluating_function_body): New global flag.
	* ov-usr-fcn.cc (octave_user_function::do_index_op):