@@ -1,6 +1,7 @@
 2000-02-02  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* Map.cc (index_to_CHptr): Now a macro.
+	(CHMap<C>::hash): Now a member function.
 
 	* defun-int.h (UNDERSCORIFY): New macro.
 	(DEFCONST_INTERNAL, DEFCONSTX_INTERNAL): Use it.
